# BsDiffDemo2

./: build.gradle  settings.gradle
GradlePlugin/: build.gradle
GradlePlugin/src/main/java/com/yuong/gradle/plugin/: AutoPatchBean.java  AutoPatchPlugin.java  AutoPatchTask.java
app/: build.gradle
app/src/androidTest/java/com/example/bsdiffdemo2/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bspatch.c  native-lib.cpp
app/src/main/java/com/example/bsdiffdemo2/: BsPatcher.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/bsdiffdemo2/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
